Updated AMEN prototype; added tables

--- a/projects/amen/views/dashboard/index.html
+++ b/projects/amen/views/dashboard/index.html
@@ -1,99 +1,162 @@
 <!doctype html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
-    <title>AMEN Dashboard Skunk Works | TigerConnect</title>
-    <base href="../../../../">
-    <!-- css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-          integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-          crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style/master.min.css">
-    <style>
-      body {
-        opacity: 0;
-        -webkit-transition: opacity 1s ease-in;
-        -moz-transition: opacity 1s ease-in;
-        -ms-transition: opacity 1s ease-in;
-        -o-transition: opacity 1s ease-in;
-        transition: opacity 1s ease-in;
-      }
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
+  <title>AMEN Dashboard Skunk Works | TigerConnect</title>
+  <base href="../../../../">
+  <!-- css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style/master.min.css">
+  <style>
+    body {
+      opacity: 0;
+      -webkit-transition: opacity 1s ease-in;
+      -moz-transition: opacity 1s ease-in;
+      -ms-transition: opacity 1s ease-in;
+      -o-transition: opacity 1s ease-in;
+      transition: opacity 1s ease-in;
+    }
 
-      body.visible {
-        opacity: 1;
-      }
-    </style>
-  </head>
+    body.visible {
+      opacity: 1;
+    }
+  </style>
+</head>
 
-  <body>
-    <header>
-      <nav>
-        <ul>
-          <li>Dashboard</li>
-          <li><a href="projects/amen/views/integration/index.html">Integration</a></li>
-          <li><a href="projects/amen/views/configuration/index.html">Configuration</a></li>
-          <li><a href="projects/amen/views/categorization/index.html">Categorization</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <article>
-        <h1>Dashboard</h1>
-        <section id="start">
-          <h2></h2>
-          <div class="row cards">
-            <div class="card">
-              <h3>Integrations</h3>
-              <p>You have no integrations. Configure your first integration to start receiving new messages.</p>
-              <p><a href="projects/amen/views/integration/index.html">Add new integration</a></p>
-            </div>
-            <div class="card" style="display: none;">
-              <h3>Status</h3>
-              <p>You have no integrations. Configure your first integration to start receiving current status updates here.</p>
-            </div>
-            <div class="card" style="display: none;">
-              <h3>Performance</h3>
-              <p>You have no integrations. Configure your first integration to start receiving performance metrics here.</p>
-            </div>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li>Dashboard</li>
+        <!-- <li><a href="projects/amen/views/integration/index.html">Integration</a></li>
+          <li><a href="projects/amen/views/configuration/index.html">Configuration</a></li> -->
+        <li><a href="projects/amen/views/categorization/index.html">Categorization</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <article>
+      <h1>Dashboard</h1>
+      <section>
+        <h2>Deployed Agents by Customer</h2>
+        <div class="row cards">
+          <div class="card">
+            <h3>Yale Medical Center</h3>
+            <ul class="options">
+              <li>ADT Patient Data
+                <span class="action">
+                  <span class="status valid">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M5 12l5 5l10 -10" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-exclamation-mark invalid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M12 19v.01" />
+                      <path d="M12 15v-10" />
+                    </svg>
+                  </span>
+                  <a href="" class="button tertiary">Edit</a>
+                </span>
+              </li>
+              <li>Lab Results
+                <span class="action">
+                  <span class="status valid">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M5 12l5 5l10 -10" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-exclamation-mark invalid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M12 19v.01" />
+                      <path d="M12 15v-10" />
+                    </svg>
+                  </span>
+                  <a href="" class="button tertiary">Edit</a>
+                </span>
+              </li>
+              <li>Order Requests
+                <span class="action">
+                  <span class="status valid">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M5 12l5 5l10 -10" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-exclamation-mark invalid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M12 19v.01" />
+                      <path d="M12 15v-10" />
+                    </svg>
+                  </span>
+                  <a href="" class="button tertiary">Edit</a>
+                </span>
+              </li>
+            </ul>
           </div>
-        </section>
-      </article>
-    </main>
-    <footer>
-      <form class="color-mode">
-        <fieldset class="toggle">
-          <label for="switch-theme">
-            <span class="light-mode">
-              <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-sun"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" /><path d="M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7" /></svg>
-            </span>
-            <input type="checkbox" id="switch-theme" class="toggle" name="switch-theme" title="switch-theme">
-            <span class="dark-mode">
-              <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-moon"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z" /></svg>
-            </span>
-          </label>
-        </fieldset>
-      </form>
-    </footer>
-    <!-- scripts -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="projects/amen/assets/scripts/site.js"></script>
-    <script src="assets/scripts/headroom.js"></script>
-    <script>
-      // CHANGE CSS WHEN PAGE LOADS
-      $(document).ready(function () {
-        $("body").addClass("visible");
-        $("body").removeClass("hidden");
-      });
-      // HEADROOM
-      var myElement = document.querySelector("header");
-      var headroom = new Headroom(myElement);
-      headroom.init();
-    </script>
-  </body>
+        </div>
+      </section>
+    </article>
+  </main>
+  <footer>
+    <form class="color-mode">
+      <fieldset class="toggle">
+        <label for="switch-theme">
+          <span class="light-mode">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+              class="icon icon-tabler icons-tabler-outline icon-tabler-sun">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
+              <path d="M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7" />
+            </svg>
+          </span>
+          <input type="checkbox" id="switch-theme" class="toggle" name="switch-theme" title="switch-theme">
+          <span class="dark-mode">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+              class="icon icon-tabler icons-tabler-outline icon-tabler-moon">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z" />
+            </svg>
+          </span>
+        </label>
+      </fieldset>
+    </form>
+  </footer>
+  <!-- scripts -->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="projects/amen/assets/scripts/site.js"></script>
+  <script src="assets/scripts/headroom.js"></script>
+  <script>
+    // CHANGE CSS WHEN PAGE LOADS
+    $(document).ready(function () {
+      $("body").addClass("visible");
+      $("body").removeClass("hidden");
+    });
+    // HEADROOM
+    var myElement = document.querySelector("header");
+    var headroom = new Headroom(myElement);
+    headroom.init();
+  </script>
+</body>
 
 </html>
