--- a/projects/amen/views/integration/index.html
+++ b/projects/amen/views/integration/index.html
@@ -35,8 +35,8 @@
       <nav>
         <ul>
           <li><a href="projects/amen/views/dashboard/index.html">Dashboard</a></li>
-          <li>Integration</li>
-          <li><a href="projects/amen/views/configuration/index.html">Configuration</a></li>
+          <!-- <li>Integration</li>
+          <li><a href="projects/amen/views/configuration/index.html">Configuration</a></li> -->
           <li><a href="projects/amen/views/categorization/index.html">Categorization</a></li>
         </ul>
       </nav>
