--- a/projects/amen/views/categorization/adt-categoriztion.html
+++ b/projects/amen/views/categorization/adt-categoriztion.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
-  <title>AMEN Configuration Skunk Works | TigerConnect</title>
+  <title>AMEN ADT Categorization Skunk Works | TigerConnect</title>
   <base href="../../../../">
   <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -35,72 +35,69 @@
     <nav>
       <ul>
         <li><a href="projects/amen/views/dashboard/index.html">Dashboard</a></li>
-        <!-- <li><a href="projects/amen/views/integration/index.html">Integration</a></li>
-        <li>Configuration</li> -->
+        <!-- <li><a href="projects/amen/views/integration/index.html">Integration</a></li> -->
+        <!-- <li><a href="projects/amen/views/configuration/index.html">Configuration</a></li> -->
         <li><a href="projects/amen/views/categorization/index.html">Categorization</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <article>
-      <h1>Configuration</h1>
-      <section id="start" class="visuallyhidden">
-        <h2>Create New Integration</h2>
+      <h1>Categorization</h1>
+      <h2>Yale Medical Center</h2>
+      <section>
+        <h3>ADT Patient Data Categorization</h3>
         <div class="row cards">
           <div class="card">
-            <h3>Integrations</h3>
-            <p>You have no integrations. Configure your first integration to start receiving new messages.</p>
-            <p><a href="projects/amen/views/integration/index.html">Add new integration</a></p>
-          </div>
-      </section>
-      <section id="integrated">
-        <h2>Current Integrations</h2>
-        <div class="row cards">
-          <div class="card">
-            <h3>Integration Details</h3>
-            <ul class="no-bullets">
-              <li><b>ID:&nbsp;</b></li>
-              <li><b>Name:&nbsp;</b></li>
-              <li><b>Status:&nbsp;</b></li>
-              <li><b>Version:&nbsp;</b></li>
-              <li><b>OS:&nbsp;</b></li>
-              <li><b>Behavior:&nbsp;</b></li>
-            </ul>
-          </div>
-          <div class="card">
-            <h3>Definitions</h3>
-            <ul class="options">
-              <li>Dev Task Definition<span class="action"><a href="" class="button tertiary">Edit</a></span></li>
-              <li>Prod Task Definition<span class="action"><a href="" class="button tertiary">Edit</a></span></li>
-              <li>All Task Definitions<span class="action"><a href="" class="button tertiary">Edit</a></span></li>
-            </ul>
-            <h3>Configurations</h3>
-            <ul class="options">
-              <li>clinical-configuration.json<span class="action"><a href="" class="button tertiary">Edit</a></span></li>
-              <li>clinical-adt.groovy<span class="action"><a href="" class="button tertiary">Edit</a></span></li>
-              <li>clinical-orm-o01.groovy<span class="action"><a href="" class="button tertiary">Edit</a></span></li>
-              <li>clinical-oru-o01.groovy<span class="action"><a href="" class="button tertiary">Edit</a></span></li>
-            </ul>
-          </div>
-          <div class="card">
-            <h3>Tasks</h3>
-            <form>
-              <fieldset class="checkbox checklist">
-                <legend>Mark As Done</legend>
-                <input type="checkbox" id="integration-send-vm-guide" name="integration-send-vm-guide" value="Send VM guide">
-                <label for="integration-send-vm-guide">Send VM guide</label>
-                <input type="checkbox" id="integration-create-dashboard" name="integration-create-dashboard" value="Create dashboard for behaviors">
-                <label for="integration-create-dashboard">Create dashboard for behaviors</label>
-                <input type="checkbox" id="integration-configure-timezone" name="integration-configure-timezone" value="Configure org matches and timezone">
-                <label for="integration-configure-timezone">Configure org matches and timezone</label>
+            <h4>HL7 Configuration</h4>
+            <form id="adt-hl7-server-setup">
+              <fieldset>
+                <label for="hl7-local-ip-address">Local IP Address</label>
+                <input type="text" id="hl7-local-ip-address" name="hl7-local-ip-address" value="127.0.0.1" readonly>
+              </fieldset>
+              <fieldset class="small">
+                <label for="hl7-local-port">Local Port</label>
+                <input type="text" id="hl7-local-port" name="hl7-local-port" value="8000" readonly>
+              </fieldset>
+              <fieldset class="small">
+                <label for="hl7-connection-timeout">Connection Timeout (sec)</label>
+                <input type="number" id="hl7-connection-timeout" name="hl7-connection-timeout" value="86400" readonly>
+              </fieldset>
+              <fieldset>
+                <label for="hl7-parsing-algorithm">Parsing Algorithm</label>
+                <input type="text" id="hl7-parsing-algorithm" name="hl7-parsing-algorithm" value="HL7 ADT v2.x"
+                  readonly>
               </fieldset>
             </form>
             <ul class="options">
-              <li>Create Infrastructure<span class="action"><a href="" class="button tertiary">Create</a></span></li>
-              <li>Request creation of prod infrastructure<span class="action"><a href="" class="button tertiary">Create Ticket</a></span></li>
-              <li>Request curl commands<span class="action"><a href="" class="button tertiary">Create Ticket</a></span></li>
-              <li>Request DevOps configuration merge<span class="action"><a href="" class="button tertiary">Create Ticket</a></span></li>
+              <li>Edit configuration<span class="action"><a href="" class="button tertiary">Edit</a></span></li>
             </ul>
+          </div>
+          <div class="card column-9">
+            <h4>Categorization</h4>
+            <table>
+              <caption>ADT Patient Data HL7 Entities</caption>
+              <thead>
+                <tr>
+                  <th scope="col">ADT Data Object</th>
+                  <th scope="col">HL7 Field Mapping</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td data-label="ADT Data Object">Event Type</td>
+                  <td data-label="HL7 Field Mapping">MHS[1].5.1</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="ADT Data Object">Patient Name</td>
+                  <td data-label="HL7 Field Mapping">PID[1].3</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="ADT Data Object">Patient Current Location</td>
+                  <td data-label="HL7 Field Mapping">PV1[1].5</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </section>
