--- a/projects/amen/views/categorization/adt-categoriztion.html
+++ b/projects/amen/views/categorization/adt-categoriztion.html
@@ -73,7 +73,7 @@
               <li>Edit configuration<span class="action"><a href="" class="button tertiary">Edit</a></span></li>
             </ul>
           </div>
-          <div class="card column-9">
+          <div class="card">
             <h4>Categorization</h4>
             <table>
               <caption>ADT Patient Data HL7 Entities</caption>
