--- a/style/_scss/_tables.scss
+++ b/style/_scss/_tables.scss
@@ -8,7 +8,8 @@ table {
   text-align: left;
 
   thead {
-    // display: none;
+    display: none;
+    font-size: $small;
   }
 
   tr,
@@ -20,15 +21,25 @@ table {
     white-space: nowrap;
   }
 
+  tr {
+    padding: 0 0 $p;
+
+    &:last-of-type {
+      padding: 0;
+    }
+  }
+
   th,
   td {
-    display: inline-block;
+    display: flex;
+    align-items: center;
   }
 
   td:before {
     display: inline-block;
-    display: none;
     overflow: hidden;
+    padding: 0 $spacing-8 0 0;
+    font-size: $small;
     font-weight: 900;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -39,7 +50,17 @@ table {
 @media (min-width: 40rem) {
   table {
     thead {
-      display: inherit;
+      display: table-header-group;
+    }
+
+    tr {
+      display: table-row;
+      padding: 0;
+    }
+
+    th,
+    td {
+      display: table-cell;
     }
 
     td:before {
