--- a/style/master.css
+++ b/style/master.css
@@ -71,6 +71,8 @@ html.dark body {
 }
 
 * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -94,6 +96,10 @@ a {
   font-weight: 700;
   text-decoration: none;
   color: var(--color--action-light);
+  -webkit-transition: color 0.25s ease 0s;
+  -moz-transition: color 0.25s ease 0s;
+  -ms-transition: color 0.25s ease 0s;
+  -o-transition: color 0.25s ease 0s;
   transition: color 0.25s ease 0s;
 }
 a:hover, a:focus {
@@ -311,6 +317,10 @@ select {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 
@@ -408,6 +418,10 @@ input:placeholder {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 
@@ -474,6 +488,10 @@ input[type=checkbox] + label:before {
   border-radius: var(--border-radius-xs);
   background-color: transparent;
   content: "";
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 input[type=checkbox] + label:after {
@@ -486,6 +504,10 @@ input[type=checkbox] + label:after {
   background-image: url(../assets/icons/ui/check.svg);
   background-size: contain;
   content: none;
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 
@@ -537,6 +559,10 @@ fieldset.radio input[type=radio] + label:before {
   border-radius: 100%;
   background-color: transparent;
   content: "";
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 fieldset.radio input[type=radio] + label:after {
@@ -550,6 +576,10 @@ fieldset.radio input[type=radio] + label:after {
   background-color: var(--color--bg-dark);
   opacity: 0;
   content: "";
+  -webkit-transition: opacity 0.25s ease 0s;
+  -moz-transition: opacity 0.25s ease 0s;
+  -ms-transition: opacity 0.25s ease 0s;
+  -o-transition: opacity 0.25s ease 0s;
   transition: opacity 0.25s ease 0s;
 }
 fieldset.radio input[type=radio]:checked + label:before {
@@ -615,6 +645,10 @@ fieldset.toggle label input[type=checkbox]:after {
   border-radius: 100%;
   background-color: var(--color--border);
   content: "";
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 fieldset.toggle label input[type=checkbox]:checked {
@@ -670,6 +704,9 @@ fieldset.range input[type=range]::-webkit-slider-thumb {
   -moz-appearance: none;
   appearance: none;
   -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 fieldset.range input[type=range]::-moz-range-thumb {
@@ -681,7 +718,10 @@ fieldset.range input[type=range]::-moz-range-thumb {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+  -webkit-transition: all 0.25s ease 0s;
   -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 
@@ -763,20 +803,10 @@ html.dark select:disabled {
   color: var(--color--status-disabled);
 }
 
-input:-moz-read-only, select:-moz-read-only {
-  border-color: var(--color--status-readonly);
-  color: var(--color--status-readonly);
-}
-
 input:read-only,
 select:read-only {
   border-color: var(--color--status-readonly);
   color: var(--color--status-readonly);
-}
-
-html.dark input:-moz-read-only, html.dark select:-moz-read-only {
-  border-color: var(--color--text-light);
-  color: var(--color--text-light);
 }
 
 html.dark input:read-only,
@@ -793,6 +823,10 @@ table {
   table-layout: fixed;
   text-align: left;
 }
+table thead {
+  display: none;
+  font-size: var(--small);
+}
 table tr,
 table th,
 table td {
@@ -801,14 +835,22 @@ table td {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+table tr {
+  padding: 0 0 var(--p);
+}
+table tr:last-of-type {
+  padding: 0;
+}
 table th,
 table td {
-  display: inline-block;
+  display: flex;
+  align-items: center;
 }
 table td:before {
   display: inline-block;
-  display: none;
   overflow: hidden;
+  padding: 0 var(--spacing--8) 0 0;
+  font-size: var(--small);
   font-weight: 900;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -817,7 +859,15 @@ table td:before {
 
 @media (min-width: 40rem) {
   table thead {
-    display: inherit;
+    display: table-header-group;
+  }
+  table tr {
+    display: table-row;
+    padding: 0;
+  }
+  table th,
+  table td {
+    display: table-cell;
   }
   table td:before {
     display: none;
@@ -1052,6 +1102,10 @@ html.dark form.color-mode fieldset label input[type=checkbox]:checked:after {
   max-height: 0;
   opacity: 0;
   stroke-width: 2.5;
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 .card ul.options li span.status.invalid {
@@ -1194,15 +1248,27 @@ header {
 }
 
 .headroom {
+  -webkit-transition: all 0.5s ease 0s;
+  -moz-transition: all 0.5s ease 0s;
+  -ms-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
   transition: all 0.5s ease 0s;
   will-change: transform;
 }
 
 .headroom--pinned {
+  -webkit-transform: translateY(0);
+  -moz-transform: translateY(0);
+  -ms-transform: translateY(0);
+  -o-transform: translateY(0);
   transform: translateY(0);
 }
 
 .headroom--unpinned {
+  -webkit-transform: translateY(-100vh);
+  -moz-transform: translateY(-100vh);
+  -ms-transform: translateY(-100vh);
+  -o-transform: translateY(-100vh);
   transform: translateY(-100vh);
 }
 
@@ -1264,7 +1330,6 @@ button,
 .button {
   display: inline-flex;
   align-items: center;
-  width: -moz-max-content;
   width: max-content;
   max-width: 100%;
   overflow: hidden;
@@ -1281,6 +1346,10 @@ button,
   white-space: nowrap;
   color: var(--color--text-light);
   background-color: var(--color--action-light);
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 button:hover, button:focus,
